Update ChallengeValidator.java