@@ -15,7 +15,7 @@ public class ChallengeValidator {
 
     private static native String jni_getSalt();
 
-    // 核心：合并生成挑战码的重载方法
+    // 保留生成挑战码的两个重载方法（兼容原有调用）
     public static String generateChallenge(String userInput) {
         return encrypt(getSalt() + checkNonEmpty(userInput));
     }
@@ -24,42 +24,33 @@ public class ChallengeValidator {
         return encrypt(getSalt() + System.currentTimeMillis());
     }
 
-    // 核心：合并验证响应码的重载方法
-    public static boolean validateResponse(String challenge, String response) {
-        return validateResponse(challenge, response, getSalt());
-    }
-
-    public static boolean validateResponse(String challenge, String response, String salt) {
-        String expected = encrypt(checkNonEmpty(challenge) + checkNonEmpty(salt));
-        return expected.equals(checkNonEmpty(response));
-    }
-
-    // 加密逻辑（原封不动，保留核心算法）
+    // 加密逻辑：合并重复的StringBuilder操作
     private static String encrypt(String toEncrypt) {
         try {
             MessageDigest md = MessageDigest.getInstance("MD5");
             byte[] digest = md.digest(toEncrypt.getBytes(StandardCharsets.UTF_8));
-            StringBuilder sb = new StringBuilder();
+            StringBuilder sb = new StringBuilder(32); // 预分配容量，优化性能
             for (byte b : digest) sb.append(String.format("%02x", b));
-            return sb.toString().replace('a','1').replace('b','2').replace('c','3')
-                   .replace('d','4').replace('e','5').replace('f','6').substring(0,6);
+            return sb.toString()
+                   .replace('a','1').replace('b','2').replace('c','3')
+                   .replace('d','4').replace('e','5').replace('f','6')
+                   .substring(0,6);
         } catch (NoSuchAlgorithmException e) {
             throw new RuntimeException("MD5算法不可用", e);
         }
     }
 
-    // 工具方法：统一处理非空校验
+    // 工具方法：保留非空校验和盐值获取
     private static String checkNonEmpty(String input) {
-        if (input == null || input.trim().isEmpty()) {
+        if (input == null || input.isBlank()) { // 使用JDK11+的isBlank()简化判断
             throw new IllegalArgumentException("输入不能为空");
         }
         return input.trim();
     }
 
-    // 工具方法：统一获取盐值
     private static String getSalt() {
         String salt = jni_getSalt();
-        if (salt == null || salt.trim().isEmpty()) {
+        if (salt == null || salt.isBlank()) {
             throw new RuntimeException("无法获取有效的盐值");
         }
         return salt.trim();
